Add web service name and url to server response (#30)
* Adding oshinko web service name and URL to the output for
the server response.  Currently, the URL is just faked.

* Adding the correct host for the web-url value in
the server response.
